# quick-insights

./: .env  AGENTS.md  CHANGES.md  LICENSE.md  PATCH_GUIDE.md  README.md  __init__ (4).py  agent.py  default.html  download  download (1)  excel_service.py  login.html  patch_default_html.py  pyproject.toml  requirements.txt  run.py  schemas.py
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py  security.py
app/models/: schemas.py
app/services/: agent_service.py  analytics_service.py  email_service.py  viz_service.py
app/static/: v21_features.js
app/templates/: default.html  login.html
data/: quick_insights.db
skills/query-writing/: SKILL.md
skills/schema-exploration/: SKILL.md
uploads/: test_data.xlsx
